--- a/index.html
+++ b/index.html
@@ -368,6 +368,16 @@
     <!-- Floating WhatsApp Button -->
     <a href="https://wa.me/919842174311?text=Hello%20Thirupathi%20Travels,%20I%20would%20like%20to%20inquire%20about%20your%20services" class="floating-whatsapp" aria-label="Contact us on WhatsApp">💬</a>
 
+    <!-- Thank You Modal -->
+    <div id="thankYouModal" class="thank-you-modal">
+        <div class="thank-you-content">
+            <div class="thank-you-icon">✅</div>
+            <h3>Thank You!</h3>
+            <p id="thankYouMessage">Your message has been sent successfully.</p>
+            <button onclick="closeThankYouModal()" class="close-modal-btn">Close</button>
+        </div>
+    </div>
+
 <script src="script.js"></script>
 </body>
 </html>
