--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600;700&family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <meta name="description" content="Madurai's best travel services offering guided tours, transportation, and holiday packages. Explore temples, culture, and attractions with us.">
     <meta name="keywords" content="Madurai best travels, travel agency Madurai, Madurai tours, holiday packages Madurai, temple tours, sightseeing Madurai">
-    <meta name="author" content="Thirupathi Travels">
+    <meta name="Rhea Charis" content="Thirupathi Travels">
 
     <!-- Favicon -->
     <link rel="icon" href="images/favicon.jpg" type="image/x-icon" />
@@ -346,7 +346,7 @@
                     <p><span style="margin-right: 8px;">📞</span> <a href="tel:9842174311">9842174311</a></p>
                     <p><span style="margin-right: 8px;">📞</span> <a href="tel:9025515662">9025515662</a></p>
                     <p><span style="margin-right: 8px;">📧</span> <a href="mailto:thirupathitravels2@gmail.com">thirupathitravels2@gmail.com</a></p>
-                    <p><span style="margin-right: 8px;">🕐</span> Available 24/7</p>
+                    <p><span style="margin-right: 8px;">🕒</span> Available 24/7</p>
                     <a href="https://wa.me/917904444622?text=Hello%20Thirupathi%20Travels,%20I%20would%20like%20to%20book%20a%20car%20rental%20service" class="whatsapp-button" style="margin-top: 24px; color: #25d366; background: white;">WhatsApp Us</a>
                 </div>
                 <div class="contact-form">
